--- a/tests/assets/main.css
+++ b/tests/assets/main.css
@@ -1,7 +1,11 @@
 #a {
     background-image: url('/img/bg.png');
+    width: 640px;
+    height: 400px;
 }
 
 #b {
     background-image: url('/img/bg2.png');
+    width: 300px;
+    height: 100px;
 }
